style:h2 in demo,h4in form in mystyle.css

--- a/Demo.html
+++ b/Demo.html
@@ -3,8 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links</title>
+    <link rel="stylesheet" href="./CSS/mystyle.css">
 </head>
 <body>
+    <h2>Hello</h2>
     <a rel="noopener" href="https://en.wikipedia.org/wiki/Moon" target="_blank">About Moon planet</a>
     <br>
     <a href="./TableDemo.html" target="_blank">Table Page</a>
