nav added in formDemo

--- a/Demo.html
+++ b/Demo.html
@@ -16,7 +16,7 @@
         <tr>
             <td>
                 <figure>
-                    <a href="https://en.wikipedia.org/wiki/Moon" target="mooninfo"
+                    <a href="https:/203bfaf/en.wikipedia.org/wiki/Moon" target="mooninfo"
                     ><img src="./Media/moonlight.jpg" alt="moon"></a>
                     <figcaption>Moon</figcaption>
                 </figure>
