--- a/Form.html
+++ b/Form.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./CSS/mystyle.css">"
 </head>
 <body>
+    <nav>
+        <a href="./Demo.html">Form</a>  <a href="./Form.html">Form</a>
+    </nav>
     <h4>Hello World</h4>
     <form action = "success.html">
 
