feat: navbar added in Form and Demo file,also styling added in mystyle file

--- a/Demo.html
+++ b/Demo.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="./CSS/mystyle.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="./Demo.html">Form</a>  <a href="./Form.html">Form</a>
+        </nav>
     <h2>Hello</h2>
     <a rel="noopener" href="https://en.wikipedia.org/wiki/Moon" target="_blank">About Moon planet</a>
     <br>
