--- a/Form.html
+++ b/Form.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./CSS/mystyle.css">"
 </head>
 <body>
+    <header>
     <nav>
         <a href="./Demo.html">Form</a>  <a href="./Form.html">Form</a>
     </nav>
+ </header>
     <h4>Hello World</h4>
     <form action = "success.html">
 
